--- a/studying-for-exam-problems.html
+++ b/studying-for-exam-problems.html
@@ -842,21 +842,23 @@
 	
 	// Exercise 44
 	// Write a function definition named hasVowels that takes in value and returns true if the string contains any vowels.
+	
 	function hasVowels(string) {
-		var vowels = ['a', 'e', 'i', 'o', 'u'];
 		var stringArray = string.split("");
+		var vowels = ["a", "e", "i", "o", "u"];
 		var answer;
-		vowels.forEach(function(value, index, array){
-			if (stringArray.includes(value)) answer = true;
-			else answer = false;
+		stringArray.forEach(function (value, index, array) {
+		answer = value;
 		});
 		return answer;
-		};
-	console.log(hasVowels("word"));
-	// console.log(hasVowels("banana"), true, "Exercise 1");
-	// console.log(hasVowels("ubuntu"), true, "Exercise 2");
-	// console.log(hasVowels("QQQQ"), false, "Exercise 3");
-	// console.log(hasVowels("wyrd"), false, "Exercise 4");
+	}
+		// if (vowels.indexOf(stringArray) !== -1) return true;
+		// else return false;};
+	// console.log(hasVowels("word"));
+	console.log(hasVowels("banana"), true, "Exercise 1");
+	console.log(hasVowels("ubuntu"), true, "Exercise 2");
+	console.log(hasVowels("QQQQ"), false, "Exercise 3");
+	console.log(hasVowels("wyrd"), false, "Exercise 4");
 </script>
 <body>
 </body>
