--- a/weather_map.html
+++ b/weather_map.html
@@ -16,77 +16,159 @@
 			width: 400px;
 			height: 300px;
 		}
+		#weatherData{
+			background-color: orange;
+			width: 400px;
+			height: 300px;
+		}
 	</style>
 </head>
 <body>
 
 <h1>Exercise Weather Map</h1>
-<div id="map"></div>
-<div><span id="user_display"></span></div>
-<input type="text" id="user_input">
-<button id="clickme">click me</button>
+
+<div id="weatherData" class="weather-Data">
+stuff and things
+</div>
+
+<section id="map"></section>
+
+
+<!--<div><span id="user_display"></span></div>-->
+<!--<input type="text" id="user_input">-->
+<!--<button id="clickme">click me</button>-->
 
 
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!--jQuery-->
-<script
-		src="https://code.jquery.com/jquery-2.2.4.min.js"
-		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-		crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <!--mapbox-->
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
 <script src="js/mapbox-geocoder-utils.js"></script>
 <!--keys-->
 <script src="js/keys.js"></script>
-
 <script>
-	"use strict";
+	$(document).ready(function() {
+		"use strict";
+		mapboxgl.accessToken = MAPBOX_API_TOKEN;
+		const map = new mapboxgl.Map({
+			container: 'map', // container ID
+			style: 'mapbox://styles/mapbox/streets-v11', // style URL
+			center: [-74.5, 40], // starting position [lng, lat]
+			zoom: 9 // starting zoom
+		});
+		
+		$.get('https://api.openweathermap.org/data/2.5/onecall', {
+			lat: 29.4252,
+			lon: -98.4916,
+			appid: WEATHER_TOKEN,
+			exclude: 'minutely,hourly,current,alerts',
+			units: 'imperial'
+		}).done(function(data) {
+			console.log(data, "--Testing data---", data.daily[0].temp.day);
+			var html = "";
+			for (var i = 0; i < data.length; i++){
+				$("div.weather-Data").html(function() {
+					html += "<p> " + data.daily[i].temp.day
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>"
+					+ "<p> " + data.daily[i].temp.day + " </p>";
+				});
+				return html;
+			};
+			
+		});
+	});
+			// // log 63 from humidity ---it matters that its under this.
+			// console.log(data.daily[0].temp.day + " will supposedly be the weather today");
+			//
+			
+		// }).fail(function(jqXhr, status, error) {
+		// 	console.log(jqXhr);
+		// 	console.log(status);
+		// 	console.log(error);
+		// });
 	
-	Exercise
-	// Create a new HTML file called weather_map.html.
-	// 		As you complete each step, commit your changes and push them to GitHub.
-	// 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
-	// 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
-	// 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
-	// Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
-	// Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
-	// 		As a bonus make sure you can update the marker's position to the new search result.
+	
+	
 	//
-	mapboxgl.accessToken = MAPBOX_API_TOKEN;
-	const map = new mapboxgl.Map({
-		container: 'map', // container ID
-		style: 'mapbox://styles/mapbox/streets-v11', // style URL
-		center: [-74.5, 40], // starting position [lng, lat]
-		zoom: 9 // starting zoom
-	});
+	// 		function createHTML(data)
+	// 	{
+	// 		var html = "";
+	// 		for (var i = 0; i < data.length; i += 1) {
+	// 			html +=
+	// 					"<p>" + data.daily[i].temp.day + "</p>";
+	// 		}
+	// 		return html;
+	// 	};
+	//
+	// 	$.get('https://api.openweathermap.org/data/2.5/onecall', {
+	// 		lat: 29.4252,
+	// 		lon: -98.4916,
+	// 		appid: WEATHER_TOKEN,
+	// 		exclude: 'minutely,hourly,current,alerts',
+	// 		units: 'imperial'
+	// 	}).done(function(data) {
+	// 			$('#weatherData').html(createHTML);
+	// 		})
+	// 				.fail(function (jqXhr, status, error) {
+	// 					console.log(jqXhr);
+	// 					console.log(status);
+	// 					console.log(error);
+	// 				});
+	// });
+	//
+	// // Exercise
+	// // Create a new HTML file called weather_map.html.
+	// // 		As you complete each step, commit your changes and push them to GitHub.
+	// // 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
+	// // 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
+	// // 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
+	// // Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
+	// // Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
+	// // 		As a bonus make sure you can update the marker's position to the new search result.
+	// //
+	//
+	//
+	//
+	//
+	//
+	// // $.get('https://api.openweathermap.org/data/2.5/onecall', {
+	// // 	lat: 29.4252,
+	// // 	lon: -98.4916,
+	// // 	appid: WEATHER_TOKEN,
+	// // 	exclude: 'minutely,hourly,current,alerts',
+	// // 	units: 'imperial'
+	// // }).done(function (data){
+	// // 	console.log(data.daily[0].temp.day);
+	// // 	var weatherText = "";
+	// // 	for(var i = 0; i < data.length; i++){
+	// // 		weatherText += document.getElementById("weatherData").innerHTML =
+	// // 				'<h2>' + data.daily[0].temp.day + '</h2>';
+	// // 	}
+	// // 	$("#weatherData").html(weatherText)
+	// //
+	//
+	// 	// console.log(data.daily[0].dt);
+	// 	//
+	// 	// $("#weatherData").html(data.daily[0].dt);
+	//
+	// 	// console.log(($("#insert-weather-data").html(html));
+	// 	// log 63 from humidity ---it matters that its under this.
+	//
+	// 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
+	//
+	//
+	// // $('#clickme').click(function(){
+	// // 	$('#user_display').html($('#user_input').val());
+	// //
+	// // });
 	
-	
-	
-	$.get('https://api.openweathermap.org/data/2.5/onecall', {
-		lat: 29.4252,
-		lon: -98.4916,
-		appid: WEATHER_TOKEN,
-		exclude: 'minutely,hourly,current,alerts',
-		units: 'imperial'
-	}).done(function(data) {
-		console.log(data);
-		
-		// log 63 from humidity ---it matters that its under this.
-		
-		console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
-	}).fail(function(jqXhr, status, error) {
-		console.log(jqXhr);
-		console.log(status);
-		console.log(error);
-	});
-	
-	
-	$('#clickme').click(function(){
-		$('#user_display').html($('#user_input').val());
-	});
-
-
 </script>
 </body>
 </html>
